setup postgresql tests; setup uuid